# myutils-python

./: README.md  setup.cfg
myutils/: saveload.py
prototypes/: __saveload.ipynb
