[metadata]
name = myutils-python
version = 0.1.0
author = Jordi Yaputra
author_email = jordiyaputra@gmail.com
description = Utilities package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jordiyapz/myutils-python
project_urls =
    Bug Tracker = https://github.com/jordiyapz/myutils-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = myutils
python_requires = >=3.6